--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,18 @@
 {
-  "homepage": "/",
+  "homepage": "https://unsplash-collection-frontend.onrender.com",
   "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:3000",
+
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "clean": "rm -rf dist",
+    "start": "react-scripts start",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
