--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-server": "cd backend && npm install",
-    "start-server": "cd backend && node server.js",
+    "start-server": "cd backend && node server.js"
   },
   "keywords": [],
   "author": "",
