--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://unsplash-collection-frontend.onrender.com",
+  "homepage": "http://192.168.0.9:4173/",
   "name": "client",
   "private": true,
   "version": "0.0.0",
