--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "http://192.168.0.9:4173/",
+  "homepage": "/",
   "name": "client",
   "private": true,
+  "proxy": "https://unsplash-collection-backend.onrender.com",
   "version": "0.0.0",
   "type": "module",
 
