--- a/server/package.json
+++ b/server/package.json
@@ -13,20 +13,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "mongoose-custom-validators": "^0.0.4",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
