--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-server": "cd backend && npm install",
-    "start-server": "cd server && node server.js"
+    "install-server": "cd server && npm install",
+    "start-server": "cd server && node server.js",
+     "build-client": "cd client && npm run build",
+    "start-client": "cd client && npm run dev"
   },
   "keywords": [],
   "author": "",
