--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "install-server": "cd backend && npm install",
-    "start-server": "cd server && node server.js"
+    "install-server": "cd server && npm install",
+    "start-server": "cd server && node server.js",
+     "build-client": "cd client && npm run build",
+    "start-client": "cd client && npm run dev"
   },
   "keywords": [],
   "author": "",
