--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unsplash-collection",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-server": "cd server && npm install",
