--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ PORT=3000
 MONGO_ID=8J7moOPD7QE8Ra@cluster1
 SECRET_KEY=shhhhh
 NODEMAILER_PASSKEY=avez vdhz zvon gkbq
-EMAIL_URL=https://unsplash-collection-frontend.onrender.com
+EMAIL_URL=http://localhost:4173
