--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_UNSPLASH_KEY=U9HypG4oKEqwgm-ht1Sb3hV_Q2midaC2DvLKOG9JljE
-VITE_BASE_URL=https://unsplash-collection-backend.onrender.com
+VITE_BASE_URL=http://localhost:3000
