--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
@@ -22,6 +21,7 @@
     "infinite-scroll-component": "^0.0.4",
     "intersection-observer": "^0.12.2",
     "loadable-image": "^3.2.6",
+    "mkcert": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons-kit": "^2.0.0",
