--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PORT=3000
+# PORT=3000
 MONGO_ID=8J7moOPD7QE8Ra@cluster1
 SECRET_KEY=shhhhh
 NODEMAILER_PASSKEY=avez vdhz zvon gkbq
-EMAIL_URL=http://localhost:5173/
+EMAIL_URL=www.unsplash-collection-project.com
 # EMAIL_URL=https://unsplash-collection-frontend.onrender.com
