--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 VITE_UNSPLASH_KEY=U9HypG4oKEqwgm-ht1Sb3hV_Q2midaC2DvLKOG9JljE
-# VITE_BASE_URL=https://www.server.unsplash-collection-project.com/api
-VITE_BASE_URL=http://localhost:3000/api
+VITE_BASE_URL=https://www.server.unsplash-collection-project.com/api
+# VITE_BASE_URL=http://localhost:3000/api
 
 
