--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGO_ID=8J7moOPD7QE8Ra@cluster1
 SECRET_KEY=shhhhh
 NODEMAILER_PASSKEY=avez vdhz zvon gkbq
 EMAIL_URL=www.unsplash-collection-project.com
-# EMAIL_URL=https://unsplash-collection-frontend.onrender.com
+# EMAIL_URL=http://localhost:5173
